--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <body>
     <header>
         <div class="container-fluid">
-            <div class="row bg-dark"  id="sony">
-                <div class="col-12 ">
-                    <h1 class="text-uppercase text-white fs-3 text-end">sony</h1>
+            <div class="row"  id="sony">
+                <div class="col-12">
+                    <img src="img/sony_logo.svg" class="float-end" alt="logo sony">
                 </div>
             </div>
 
@@ -325,5 +325,83 @@
             </div>
         </section>
     </main>
+    <footer class="text-white">
+        <div class="container-fluid">
+            <div class="row py-5 px-sm-3 px-md-4 px-xl-5">
+                <div class="col-12 col-lg-6">
+                    <img src="img/ps-footer.svg" class="py-5" id="logo-ps" alt="playstation logo">
+                    <div>
+                        <i class="fas fa-globe"></i>
+                        <span class="ms-2">County/Region: Italy</span>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="row py-5 px-4">
+                        <div class="col-12 col-md-4">
+                            <ul class="list-unstyled ">
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <ul class="list-unstyled">
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <ul class="list-unstyled">
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-decoration-none text-white">Link footer n</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <img src="img/sie-logo.svg" class="py-3" id="logo-sie"  alt="logo sie">
+                    <p>Website	&#9400;2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a href="#" class="text-white"><u>Maggiori info</u></a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
