--- a/index.html
+++ b/index.html
@@ -25,39 +25,39 @@
 </head>
 <body>
     <header>
-        <div class="container-fluid">
-            <div class="row"  id="sony">
+        <div class="container-fluid p-0">
+            <div class="row pe-3"  id="sony">
                 <div class="col-12">
                     <img src="img/sony_logo.svg" class="float-end" alt="logo sony">
                 </div>
             </div>
 
-            <nav class="navbar navbar-expand-xl navbar-light bg-light ">
+            <nav class="navbar navbar-expand-xl navbar-light bg-light px-3">
                 <img class="navbar-brand" src="img/play_logo.svg" alt="Playstation logo">
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                         <li class="nav-item">
-                            <a class="nav-link fs-5 text-dark" href="#" >Giochi<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
+                            <a class="nav-link text-dark" href="#" >Giochi<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                         <li class="nav-item ms-2">
-                            <a class="nav-link fs-5 text-dark" href="#" >Hardware<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
+                            <a class="nav-link text-dark" href="#" >Hardware<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                         <li class="nav-item ms-2">
-                            <a class="nav-link fs-5 text-dark" href="#" >Servizi<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
+                            <a class="nav-link text-dark" href="#" >Servizi<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                         <li class="nav-item ms-2">
-                            <a class="nav-link fs-5 text-dark" href="#" >Novità<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
+                            <a class="nav-link text-dark" href="#" >Novità<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                         <li class="nav-item ms-2">
-                            <a class="nav-link fs-5 text-dark" href="#" >Fai acquisti<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
+                            <a class="nav-link text-dark" href="#" >Fai acquisti<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                         <li class="nav-item ms-2">
-                            <a class="nav-link fs-5 text-dark" href="#" >Supporto<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
+                            <a class="nav-link text-dark" href="#" >Supporto<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item ms-3">
-                            <a class="nav-link fs-5 text-dark" href="#" >My Playstation<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark mt-1" href="#">My Playstation<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                         <li class="nav-item">
                             <button type="button" class="btn btn-dark rounded-pill text-white my-btn-sign mt-1 ms-3">Accedi</button>
@@ -92,7 +92,7 @@
             <div class="container-fluid py-5 py-sm-5 px-sm-3 px-md-4 px-xl-5 ">
                 <div class="row g-4 g-md-5 gx-xl-4">
                     <div class="col-6 col-sm-4 col-xl-2 ">
-                        <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid" alt="returnal thumbnail">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid p-1 border border-3 border-primary" alt="returnal thumbnail">
                     </div>
                     <div class="col-6 col-sm-4 col-xl-2">
                         <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" class="img-fluid" alt="ratchet and clank rift thumbnail">
@@ -115,25 +115,25 @@
 
         <section id="ps5">
             <div class="container-fluid px-sm-3 px-md-4 px-xl-5 ">
-                <div class="row mt-5 mb-5">
+                <div class="row py-5 px-sm-3 px-md-4 px-xl-5">
                     <div class="col-12 text-center">
                         <h6 class="text-uppercase my-text-blue fs-6 fw-bold mb-0">play has no limits</h6>
                         <h1 class="fs-1 mb-4">Ecco la PlayStation 5</h1>
-                        <p class="my-text-grey fs-5 ">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+                        <p class="my-text-grey">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
                     </div>
                 </div>
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6">
-                        <h1 class="fs-1 mb-4">Console PlayStation 5</h1>
-                        <p class="my-text-grey mb-4 fs-5">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
-                        <button type="button" class="btn rounded-pill text-white my-btn-info fw-bold">Maggiori informazioni</button>
+                        <h1 class="mb-4">Console PlayStation 5</h1>
+                        <p class="my-text-grey mb-4">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
+                        <button type="button" class="btn rounded-pill text-white my-btn-info ">Maggiori informazioni</button>
                     </div>
                     <div class="col-12 col-md-6">
                         <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
                     </div>
                 </div>
-                <div class="row text-center justify-content-md-between px-0 px-md-4 py-4">
-                    <div class="col-4 col-md-2 ">
+                <div class="row text-center justify-content-md-between py-5 px-sm-3 px-md-4 px-xl-5">
+                    <div class="col-4 col-md-2 border-3 border-bottom border-primary">
                         <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
                         <p class="d-md-block d-none my-text-grey">Console PS5</p>
                     </div>
@@ -157,7 +157,7 @@
             </div>
         </section>
         <section id="it-takes-two">
-            <div class="container-fluid py-5 px-2 px-sm-4 p-lg-5">
+            <div class="container-fluid py-5 px-sm-3 px-md-4 px-xl-5">
                 <div class="row height-670 align-items-end">
                     <div class="col-11 col-lg-6 col-xl-4 text-white">
                         <img src="img/it-takes-two-logo.png" class="my-img-width mb-5" alt="img it takes two">
@@ -169,7 +169,7 @@
             </div>
         </section>
         <section class="text-white" id="new">
-            <div class="container-fluid py-3 px-sm-3 px-md-4 px-xl-5 py-xl-5">
+            <div class="container-fluid py-5 px-sm-3 px-md-4 px-xl-5">
                 <div class="row gy-5">
                     <div class="col-12 text-white">
                         <h1 class="mb-4">Nuove uscite</h1>
@@ -227,28 +227,28 @@
             </div>
         </section>
         <section id="ps4">
-            <div class="container-fluid">
+            <div class="container-fluid py-5">
                 <div class="row py-5 px-sm-3 px-md-4 px-xl-5 ">
                     <div class="col-12 text-center">
                         <h1 class="mb-4">Esplora PlayStation<span class="fs-5 align-top">&reg;</span>  4</h1>
-                        <p class="my-text-grey mb-5 fs-5">Giochi incredibili e intrattenimento senza fine.<br> Non c'è mai stato un momento migliore per giocare sulla tua PS5.</p>
+                        <p class="my-text-grey mb-5">Giochi incredibili e intrattenimento senza fine.<br> Non c'è mai stato un momento migliore per giocare sulla tua PS5.</p>
                     </div>
                     <div class="col-12 col-md-4">
                         <img src="img/ps4-slim-homepage-image-block.jpg" class="img-fluid mb-3" alt="ps4 img">
                         <h1 class="mb-4">PlayStation 4</h1>
-                        <p class="my-text-grey fs-5">Giochi incredibili live PS4, con 1 TB di spazio di archiviazione.</p>
+                        <p class="my-text-grey -5">Giochi incredibili live PS4, con 1 TB di spazio di archiviazione.</p>
                         <button type="button" class="btn my-btn-info rounded-pill text-white fw-bold">Scopri di più</button>
                     </div>
                     <div class="col-12 col-md-4">
                         <img src="img/double11-202010-tw-psvr.jpg" class="img-fluid mb-3" alt="ps4 vr img">
                         <h1 class="mb-4">PlayStation VR</h1>
-                        <p class="my-text-grey fs-5">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
+                        <p class="my-text-grey">Oltre 500 titoli ed esperienze di gioco.<br> Scoprili tutti.</p>
                         <button type="button" class="btn my-btn-info rounded-pill text-white fw-bold">Scopri di più</button>
                     </div>
                     <div class="col-12 col-md-4">
                         <img src="img/dualshock-4-listing-thumb.jpg" class="img-fluid mb-3" alt="ps4 controller img">
                         <h1 class="mb-4">Accessori</h1>
-                        <p class="my-text-grey fs-5">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
+                        <p class="my-text-grey">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
                         <button type="button" class="btn my-btn-info rounded-pill text-white fw-bold">Scopri di più</button>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
                     <div class="col-12 col-md-6 px-sm-3 px-md-4 px-xl-5 py-5 py-md-4 py-lg-5 align-self-center">
                         <img src="img/ps-plus-logo.png"  class="my-img-width mb-5" alt="PlayStation plus logo">
                         <p class="mb-5">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
-                        <button type="button" class="btn rounded-pill bg-light my-text-blue fw-bold">Esplora PlayStation Plus</button>
+                        <button type="button" class="btn rounded-pill bg-light my-text-blue fw-bold fs-5">Esplora PlayStation Plus</button>
                     </div>
                     <div class="col-6 d-none d-md-inline-block">
                         <img src="img/ps-plus-april-monthly-games-featured-image-block.png" class="img-fluid" alt="PlayStation Plus img">
@@ -269,11 +269,11 @@
             </div>
         </section>
         <section id="Store">
-            <div class="container-fluid">
+            <div class="container-fluid py-5">
                 <div class="row py-5 px-sm-3 px-md-4 px-xl-5 ">
                     <div class="col-12 text-center">
                         <h1 class="mb-4">Nuovi sconti sul PlayStation Store</h1>
-                        <p class="my-text-grey mb-5 fs-5">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
+                        <p class="my-text-grey mb-5">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
                     </div>
                     <div class="col-12 col-md-4">
                         <img src="img/playstation-store-games-under-20-spotlight.jpg" class="img-fluid mb-3" alt="games under spotlight">
@@ -293,7 +293,7 @@
                     <div class="col-12 col-md-6 px-sm-3 px-md-4 px-xl-5 py-5 py-md-4 py-lg-5 align-self-center">
                         <img src="img/ps-now-logo-two-column.png"  class="my-img-width mb-5" alt="PlayStation Now logo">
                         <p class="mb-5 text-white">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3, PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
-                        <button type="button" class="btn rounded-pill bg-light text-dark fw-bold">Esplora PlayStation Now</button>
+                        <button type="button" class="btn rounded-pill bg-light text-dark fw-bold fs-5">Esplora PlayStation Now</button>
                     </div>
                     <div class="col-6 d-none d-md-inline-block">
                         <img src="img/ps-now-april-featured-image-block.png" class="img-fluid" alt="PlayStation Plus img">
@@ -396,7 +396,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 pb-4">
                     <img src="img/sie-logo.svg" class="py-3" id="logo-sie"  alt="logo sie">
                     <p>Website	&#9400;2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a href="#" class="text-white"><u>Maggiori info</u></a></p>
                 </div>
